--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,23 +3,41 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
-    "next": "12.0.7",
+    "dependency_injection": "*",
+    "hooks": "*",
+    "ui": "*",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "framer-motion": "^6.2.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "ui": "*"
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
-    "config": "*",
-    "eslint": "7.32.0",
-    "next-transpile-modules": "9.0.0",
-    "tsconfig": "*",
-    "@types/react": "17.0.37",
-    "typescript": "^4.5.3"
+    "@iconify-json/mdi": "^1.0.17",
+    "@svgr/core": "^6.2.1",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-react": "^1.2.0",
+    "@vitest/ui": "^0.3.0",
+    "jsdom": "^19.0.0",
+    "typescript": "4.5.5",
+    "unplugin-icons": "^0.13.1",
+    "vite": "2.8.0",
+    "vite-plugin-inspect": "^0.3.13",
+    "vite-tsconfig-paths": "^3.4.0",
+    "vitest": "^0.3.0"
   }
 }
