--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,5 +1,21 @@
 {
-  "extends": "tsconfig/react-library.json",
-  "include": ["."],
-  "exclude": ["dist", "build", "node_modules"]
+	"include": ["."],
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "target": "ESNext",
+    "module": "ESNext",
+    "types": [],
+    "moduleResolution": "Node",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "strict":                           true,
+    "noEmit":                           true,
+    "allowJs":                          false,
+    "skipLibCheck":                     false,
+    "isolatedModules":                  false, // This is only false due to incompatibilities with Jest and TS. See: https://vitejs.dev/guide/features.html#typescript
+    "esModuleInterop":                  false,
+    "resolveJsonModule":                true,
+    "useDefineForClassFields":          true,
+    "allowSyntheticDefaultImports":     true,
+    "forceConsistentCasingInFileNames": true,
+  },
 }
